# python_cli_project

./: README.md  pyproject.toml
.github/workflows/: main.yml
mycli/: __main__.py  func.py
